Terraform/private_subnets.tf
resource "aws_subnet" "subnet1-private" {
  vpc_id            = aws_vpc.default.id
  cidr_block        = var.private_subnet1_cidr
  availability_zone = "us-west-1b"

  tags = {
    Name = "${var.private_subnet1_name}"
  }
}
